// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image snapshot tests > BasicImage should match snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Snapshot image"
    class="cl-image__img"
    decoding="async"
    loading="lazy"
    src="snapshot.jpg"
  />
</DocumentFragment>
`;

exports[`Image snapshot tests > FallbackImage should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="cl-image__fallback"
  >
    <svg
      aria-hidden="true"
      class="cl-image__fallback-icon"
      data-testid="fallback-icon"
    >
      chop-icon__image icon
    </svg>
    <span
      class="cl-image__fallback-text"
    >
      Image not available
    </span>
  </div>
</DocumentFragment>
`;

exports[`Image snapshot tests > Image with caption should match snapshot 1`] = `
<DocumentFragment>
  <figure
    class="_figure_d6588c"
  >
    <div
      class="cl-image"
    >
      <img
        alt="Snapshot image"
        class="cl-image__img"
        decoding="async"
        loading="lazy"
        src="snapshot.jpg"
      />
    </div>
    <figcaption
      class="_figure_caption_d6588c"
    >
      Snapshot Image
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image snapshot tests > ResponsivePicture should match snapshot 1`] = `
<DocumentFragment>
  <picture
    class="cl-image__picture"
  >
    <source
      media="(max-width: 480px)"
      srcset="https://picsum.photos/400/300 400w"
    />
    <source
      media="(max-width: 1024px)"
      srcset="https://picsum.photos/800/600 800w"
    />
    <source
      srcset="https://picsum.photos/1200/900 1200w"
    />
    <img
      alt="Snapshot image"
      class="cl-image__img"
      decoding="async"
      loading="lazy"
      src="snapshot.jpg"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image snapshot tests > ResponsivePicture should match snapshot with empty descriptors 1`] = `
<DocumentFragment>
  <picture
    class="cl-image__picture"
  >
    <source
      media="(max-width: 480px)"
      srcset="https://picsum.photos/400/300"
    />
    <source
      media="(max-width: 1024px)"
      srcset="https://picsum.photos/800/600"
    />
    <source
      srcset="https://picsum.photos/1200/900"
    />
    <img
      alt="Snapshot image"
      class="cl-image__img"
      decoding="async"
      loading="lazy"
      src="snapshot.jpg"
    />
  </picture>
</DocumentFragment>
`;
